# ComputerSystem

./: CMakeLists.txt
examples/hat_imu_ex/src/: main.c
examples/hello_hat/src/: main.c
examples/hello_serial_bidirectional_client/src/: main.c
examples/pico_w/bt/: CMakeLists.txt
examples/pico_w/bt/standalone/client/: CMakeLists.txt
examples/pico_w/bt/standalone/server/: CMakeLists.txt
examples/pico_w/wifi/: CMakeLists.txt
examples/pico_w/wifi/blink/: CMakeLists.txt
examples/pico_w/wifi/httpd/: pico_httpd.c
libs/TKJHAT/: CMakeLists.txt
libs/TKJHAT/include/tkjhat/: sdk.h  utils.h
libs/TKJHAT/src/: sdk.c  utils.c
src/: lwipopts.h  lwipopts_examples_common.h  main.c  main2.c
