set(WIFI_SSID "${WIFI_SSID}" CACHE INTERNAL "WiFi SSID for examples")
set(WIFI_PASSWORD "${WIFI_PASSWORD}" CACHE INTERNAL "WiFi password for examples")

add_subdirectory(blink)
add_subdirectory(wifi_scan)
add_subdirectory(access_point)

if ("${WIFI_SSID}" STREQUAL "")
    message("Skipping some Pico W examples as WIFI_SSID is not defined")
elseif ("${WIFI_PASSWORD}" STREQUAL "")
    message("Skipping some Pico W examples as WIFI_PASSWORD is not defined")
else()
    add_subdirectory(freertos)
    add_subdirectory(httpd)
    add_subdirectory(iperf)
    add_subdirectory(ntp_client)
    add_subdirectory(tcp_client)
    add_subdirectory(tcp_server)
    add_subdirectory(udp_beacon)
    add_subdirectory(http_client)
    add_subdirectory(mqtt)

    if (NOT TARGET pico_mbedtls)
        message("Skipping tls_client and ota_update examples as Mbed TLS is not available")
    else()
        add_subdirectory(tls_client)
        # note ota_update doesn't use Mbed TLS, but it requires picotool with Mbed TLS, so the above check is a good proxy
        add_subdirectory(ota_update rp2040)
    endif()
endif()
